<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.9"
        app:layout_constraintStart_toStartOf="parent" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gh6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gv1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gv2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gv3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gv4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gv5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt0"
        android:text="@string/bt0"
        app:layout_constraintStart_toEndOf="@id/gv1"
        app:layout_constraintBottom_toTopOf="@id/gh1"
        app:layout_constraintTop_toBottomOf="@id/gh2"
        app:layout_constraintEnd_toStartOf="@id/gv3"
        android:layout_height="0dp"
        android:layout_width="0dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btComa"
        android:text="@string/btComa"
        app:layout_constraintStart_toEndOf="@id/gv3"
        app:layout_constraintBottom_toTopOf="@id/gh1"
        app:layout_constraintTop_toBottomOf="@id/gh2"
        app:layout_constraintEnd_toStartOf="@id/gv4"
        android:layout_height="0dp"
        android:layout_width="0dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btEqual"
        android:text="@string/btEqual"
        app:layout_constraintStart_toEndOf="@id/gv4"
        app:layout_constraintBottom_toTopOf="@id/gh1"
        app:layout_constraintTop_toBottomOf="@id/gh2"
        app:layout_constraintEnd_toStartOf="@id/gv5"
        android:layout_height="0dp"
        android:layout_width="0dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btPlus"
        android:text="@string/btPlus"
        app:layout_constraintBottom_toTopOf="@id/gh2"
        app:layout_constraintEnd_toStartOf="@id/gv5"
        app:layout_constraintStart_toEndOf="@id/gv4"
        app:layout_constraintTop_toBottomOf="@id/gh3"
        android:layout_height="0dp"
        android:layout_width="0dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt1"
        android:text="@string/bt1"
        app:layout_constraintBottom_toTopOf="@id/gh2"
        app:layout_constraintEnd_toStartOf="@id/gv2"
        app:layout_constraintStart_toEndOf="@id/gv1"
        app:layout_constraintTop_toBottomOf="@id/gh3"
        android:layout_height="0dp"
        android:layout_width="0dp"
         />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt2"
        android:text="@string/bt2"
        app:layout_constraintBottom_toTopOf="@id/gh2"
        app:layout_constraintEnd_toStartOf="@id/gv3"
        app:layout_constraintStart_toEndOf="@id/gv2"
        app:layout_constraintTop_toBottomOf="@id/gh3"
        android:layout_height="0dp"
        android:layout_width="0dp"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt3"
        android:text="@string/bt3"
        app:layout_constraintBottom_toTopOf="@id/gh2"
        app:layout_constraintEnd_toStartOf="@id/gv4"
        app:layout_constraintStart_toEndOf="@id/gv3"
        app:layout_constraintTop_toBottomOf="@id/gh3"
        android:layout_height="0dp"
        android:layout_width="0dp"
         />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt4"
        android:text="@string/bt4"
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintBottom_toTopOf="@id/gh3"
        app:layout_constraintEnd_toStartOf="@id/gv2"
        app:layout_constraintStart_toEndOf="@id/gv1"
        app:layout_constraintTop_toBottomOf="@id/gh4"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt5"
        android:text="@string/bt5"
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintBottom_toTopOf="@id/gh3"
        app:layout_constraintEnd_toStartOf="@id/gv3"
        app:layout_constraintStart_toEndOf="@id/gv2"
        app:layout_constraintTop_toBottomOf="@id/gh4"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt6"
        android:text="@string/bt6"
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintBottom_toTopOf="@id/gh3"
        app:layout_constraintEnd_toStartOf="@id/gv4"
        app:layout_constraintStart_toEndOf="@id/gv3"
        app:layout_constraintTop_toBottomOf="@id/gh4"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btMinus"
        android:text="@string/btMinus"
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintBottom_toTopOf="@id/gh3"
        app:layout_constraintEnd_toStartOf="@id/gv5"
        app:layout_constraintStart_toEndOf="@id/gv4"
        app:layout_constraintTop_toBottomOf="@id/gh4"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt7"
        android:text="@string/bt7"
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintBottom_toTopOf="@id/gh4"
        app:layout_constraintEnd_toStartOf="@id/gv2"
        app:layout_constraintStart_toEndOf="@id/gv1"
        app:layout_constraintTop_toBottomOf="@id/gh5"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt8"
        android:text="@string/bt8"
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintBottom_toTopOf="@id/gh4"
        app:layout_constraintEnd_toStartOf="@id/gv3"
        app:layout_constraintStart_toEndOf="@id/gv2"
        app:layout_constraintTop_toBottomOf="@id/gh5"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt9"
        android:text="@string/bt9"
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintBottom_toTopOf="@id/gh4"
        app:layout_constraintEnd_toStartOf="@id/gv4"
        app:layout_constraintStart_toEndOf="@id/gv3"
        app:layout_constraintTop_toBottomOf="@id/gh5"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btMult"
        android:text="@string/btMult"
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintBottom_toTopOf="@id/gh4"
        app:layout_constraintEnd_toStartOf="@id/gv5"
        app:layout_constraintStart_toEndOf="@id/gv4"
        app:layout_constraintTop_toBottomOf="@id/gh5"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btClear"
        android:text="@string/btClear"
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintBottom_toTopOf="@id/gh5"
        app:layout_constraintEnd_toStartOf="@id/gv4"
        app:layout_constraintStart_toEndOf="@id/gv1"
        app:layout_constraintTop_toBottomOf="@id/gh6"
        />
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btDiv"
        android:text="@string/btDiv"
        android:layout_height="0dp"
        android:layout_width="0dp"
        app:layout_constraintBottom_toTopOf="@id/gh5"
        app:layout_constraintEnd_toStartOf="@id/gv5"
        app:layout_constraintStart_toEndOf="@id/gv4"
        app:layout_constraintTop_toBottomOf="@id/gh6"
        />

</androidx.constraintlayout.widget.ConstraintLayout>